replace HighPriest.png & fix canvas grid spacing

--- a/public/style.css
+++ b/public/style.css
@@ -32,7 +32,7 @@ p {
 }
 
 #app {
-	width: 960px;
+	width: 965px;
 }
 
 #canvas {
@@ -41,11 +41,12 @@ p {
 	background-size: 100%;
 	margin: 2rem;
 	margin-bottom: 0;
-	height: 640px;
+	height: 643px;
 	background-size: auto;
 	background-repeat: no-repeat;
 	background-color: #5DAFA7;
 	border: 1px solid #242c3c;
+	padding: 0;
 }
 
 #playerbox1 {
@@ -69,9 +70,10 @@ p {
 #card {
 	width: 120px;
 	height: 120px;
-	/*background-image: url('./assets/HighPriest.PNG');*/
+	background-image: url('assets/HighPriest.PNG');
+	background-size: contain;
 	border: 2px solid #242c3c;
-	background-color: #242c3c;
+	/*background-color: #242c3c;*/
 	z-index: 0;
 }
 
